Updates from ShareLaTeX

--- a/ms.tex
+++ b/ms.tex
@@ -537,7 +537,8 @@ depth \anytodo{Right? Right?}.
 We conclude the observed transit signal from EPIC 201555883 is likely the result 
 of an instrumental artifact.
 
-Such effects are not uncommon in \kep\ data. 
+False positives induced by the presence of a true astrophysical object with the same 
+transit ephemeris are not uncommon in \kep\ data. 
 \citet{Batalha13} found $\sim 25$ planet candidates to be false positives based on matching
 ephemerides between candidates. 
 In that paper, the authors limited their search to candidates within $20\arcsec$ of other
@@ -591,7 +592,15 @@ JWST to probe planetary atmospheres.
 
 \section{Results and Discussion}
 
-Something about Multis and TTVs will go in here.
+We have presented stellar parameters for all planet candidates systems observed by 
+\paperit, confirming \btmtodo{Nconfirm} of the 36 candidates as bona fide planets and 
+\btmtodo{NFP} as bona fide false positives. 
+
+With the exception of one object, all of the stellar parameters are derived from comparing 
+photometric observations to the Dartmouth stellar evolution models. 
+As a result, both the stellar and planet parameters are subject to systematic biases induced
+by discrepancies between the models and reality. 
+
 
 \anytodo{We should have a figure of many subplots, of phase-folded
 transits for all the confirmed planets. 
@@ -646,6 +655,9 @@ Fellowship under Grant No. DGE‐1144469.
 J.A.J. is supported by generous grants from the David and Lucile Packard
 Foundation and the Alfred P. Sloan Foundation.
 
+D.F.M. and D.W.H. were partially supported by the National Science Foundation 
+(grant IIS-1124794), the National Aeronautics and Space Administration (grant 
+NNX12AI50G), and the Moore–Sloan Data Science Environment at NYU.
 
 
 {\it Facilities:} \facility{Kepler}%, \btmtodo{More...}
