tdm grant added

--- a/ms.tex
+++ b/ms.tex
@@ -706,6 +706,8 @@ D.F.M. and D.W.H. were partially supported by the National Science Foundation
 (grant IIS-1124794), the National Aeronautics and Space Administration (grant 
 NNX12AI50G), and the Moore–Sloan Data Science Environment at NYU.
 
+T.D.M.~is supported by the National Aeronautics and Space Administration (grant 
+NNX14AE11G).
 
 {\it Facilities:} \facility{Kepler}%, \btmtodo{More...}
 
